# cmake

./: CMakeLists.txt  README.md
lib/inc/: add.h
lib/src/: add.cpp
src/: main.cpp
